cif/org.eclipse.escet.cif.tests/tests/controllercheck/event_only_with_controllability.BCFN.run.err
ERROR: CIF controller properties checker failed due to unsatisfied preconditions:

  ------------------------------------------------------------------------------------
  (1/3) Edge has an explicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In automaton "p":
     - edge tau;
            ^

  ------------------------------------------------------------------------------------
  (2/3) Edge has an implicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In automaton "p":
     - edge when true;
       ^

  --------------------------------------------------------------
  (3/3) Event is not declared as controllable or uncontrollable.
  --------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e;
             ^
